--- a/src/app/pages/top-navbar/top-navbar.component.scss
+++ b/src/app/pages/top-navbar/top-navbar.component.scss
@@ -61,6 +61,6 @@ svg {
     fill: var(--pdz-primary);
   }
   .logo-bottom {
-    fill: var(--pdz-tertiary);
+    fill: var(--pdz-secondary);
   }
 }
