--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -20,15 +20,14 @@ $theme: (
     primary-hover: #137986,
     primary-border: #79dfec,
     primary-subtle: #e9fafc,
-
-    secondary: #cc6600,
+    primary-gradient: linear-gradient(135deg, #4ac1d0, #b2f1fa),
+    secondary: #f47c4f,
     on-secondary: #ffffff,
-    secondary-container: #ffe6cc,
-    on-secondary-container: #331a00,
-    secondary-hover: #b35a00,
-    secondary-border: #ffb366,
-    secondary-subtle: #fff2e5,
-
+    secondary-container: #fdece7,
+    on-secondary-container: #5d2a1a,
+    secondary-hover: #e06a3e,
+    secondary-border: #f8a88f,
+    secondary-subtle: #fef6f3,
     menu-background: #ffffff,
     menu-item-text: #151d1f,
     menu-item-hover-background: #f0f8fa,
