--- a/src/app/debug/components/debug-components.component.scss
+++ b/src/app/debug/components/debug-components.component.scss
@@ -70,7 +70,7 @@ $icon-sizes: 20, 24, 32, 40, 48;
     color: var(--pdz-on-secondary);
   }
   &.tertiary {
-    background-color: var(--pdz-tertiary);
+    background-color: var(--pdz-secondary);
     color: var(--pdz-on-tertiary);
   }
   &.error {
@@ -86,7 +86,7 @@ $icon-sizes: 20, 24, 32, 40, 48;
     color: var(--pdz-on-secondary-container);
   }
   &.tertiary-container {
-    background-color: var(--pdz-tertiary-container);
+    background-color: var(--pdz-secondary-container);
     color: var(--pdz-on-tertiary-container);
   }
   &.error-container {
@@ -102,7 +102,7 @@ $icon-sizes: 20, 24, 32, 40, 48;
     color: var(--pdz-on-secondary-fixed);
   }
   &.tertiary-fixed {
-    background-color: var(--pdz-tertiary-fixed);
+    background-color: var(--pdz-secondary-fixed);
     color: var(--pdz-on-tertiary-fixed);
   }
   &.primary-fixed-dim {
@@ -114,7 +114,7 @@ $icon-sizes: 20, 24, 32, 40, 48;
     color: var(--pdz-on-secondary-fixed-variant);
   }
   &.tertiary-fixed-dim {
-    background-color: var(--pdz-tertiary-fixed-dim);
+    background-color: var(--pdz-secondary-fixed-dim);
     color: var(--pdz-on-tertiary-fixed-variant);
   }
   &.surface-dim {
